--- a/index.html
+++ b/index.html
@@ -8,6 +8,79 @@
     <script src="test.js"></script>
 </head>
 <body>
-    <p id="ballong" onclick="växa()">🎈</p>
+    <div id="flex-container">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <img src="dice1.png" class="dice" alt="">
+        <button onclick="rool()">Kasta tärningar</button>
+    </div>
 </body>
 </html>
