--- a/index.html
+++ b/index.html
@@ -14,73 +14,13 @@
         <img src="dice1.png" class="dice" alt="">
         <img src="dice1.png" class="dice" alt="">
         <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <img src="dice1.png" class="dice" alt="">
-        <button onclick="rool()">Kasta tärningar</button>
+
+        <input type="checkbox" class="check" id="c1">
+        <input type="checkbox" class="check" id="c2">
+        <input type="checkbox" class="check" id="c3">
+        <input type="checkbox" class="check" id="c4">
+        <input type="checkbox" class="check" id="c5">
+        <button onclick="roll()">Kasta tärningar</button>
     </div>
 </body>
 </html>
